# cine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  TEST_REPORT.md  docker-compose.fnos.yml  docker-compose.yml
.github/workflows/: ci.yml  main.yml  release.yml  tests.yml
backend/: Cargo.toml  build.rs
backend/benches/: hash_bench.rs  performance_bench.rs
backend/migrations/: 001_init.sql  002_add_indexes.sql  003_add_tmdb_and_quality.sql  004_add_logs_and_history.sql  005_add_watch_folders.sql  006_add_settings.sql  007_add_unified_tasks.sql  008_add_composite_indexes.sql  009_add_tasks_list_index.sql  010_add_operation_logs_index.sql  011_add_task_lease_and_retry.sql  012_add_identify_fields.sql
backend/src/: api_version.rs  bootstrap.rs  config.rs  error.rs  graphql.rs  lib.rs  main.rs  models.rs  openapi.rs  routes.rs  websocket.rs
backend/src/handlers/: business_monitor.rs  cache_stats.rs  dedupe.rs  file_ops.rs  hash.rs  history.rs  identify.rs  log.rs  metrics.rs  mod.rs  nfo.rs  performance_monitor.rs  plugins.rs  queue_stats.rs  rename.rs  scan.rs  scrape.rs  settings.rs  subtitle.rs  tasks.rs  trash.rs  video.rs  watcher.rs
backend/src/services/: business_metrics.rs  cache.rs  dedupe.rs  distributed.rs  empty_dirs.rs  file_ops.rs  hasher.rs  hasher_parallel.rs  history.rs  identify.rs  library_service.rs  log.rs  metrics.rs  mod.rs  nfo.rs  plugin.rs  poster.rs  progress_estimator.rs  progress_hub.rs  quality.rs  queries.rs  renamer.rs  scanner.rs  scheduler.rs  scraper.rs  smart_cache.rs  subtitle.rs  task_executors.rs  task_queue.rs  trash.rs  video.rs  watcher.rs
backend/src/utils/: logging.rs  mod.rs
backend/tests/: lib.rs  test_helper.rs
backend/tests/common/: mod.rs
backend/tests/integration/: api_extended_test.rs  api_test.rs  automation_test.rs  identify_api_test.rs  mod.rs  settings_api_test.rs  toolbox_test.rs
backend/tests/unit/: cache.rs  dedupe.rs  dedupe_batch.rs  empty_dirs.rs  file_ops.rs  hasher.rs  hasher_extended.rs  hasher_parallel.rs  mod.rs  nfo.rs  renamer.rs  scanner.rs  scanner_batch.rs  scanner_extended.rs  scheduler.rs  scraper.rs  subtitle.rs  trash.rs  watcher.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  stats.html  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  media.ts  metrics.ts  settings.ts  tasks.ts
frontend/src/api/__tests__/: media.test.ts
frontend/src/components/: AnimatedCard.tsx  ContextMenu.tsx  ErrorBoundary.tsx  LoadingWrapper.tsx  NfoEditor.tsx  PageHeader.tsx  ProgressMonitor.tsx  SearchField.tsx  Sidebar.tsx  SkeletonCard.tsx  StatCard.tsx  StorageChart.tsx  SubtitleHub.tsx  ThemeToggle.tsx  VirtualizedTable.tsx
frontend/src/components/__tests__/: LoadingWrapper.test.tsx  ProgressMonitor.test.tsx  VirtualizedTable.test.tsx
frontend/src/config/: queryConfig.ts
frontend/src/config/__tests__/: queryConfig.test.ts
frontend/src/hooks/: useDebounce.ts  useDuplicates.ts  useFilesQuery.ts  useOperationLogs.ts  useRequestDeduplication.ts  useScanHistory.ts  useTasksQuery.ts  useTheme.ts  useWebSocket.ts
frontend/src/hooks/__tests__/: useTheme.test.ts
frontend/src/pages/: Dashboard.tsx  Dedupe.tsx  EmptyDirs.tsx  FileManager.tsx  OperationLogs.tsx  Renamer.tsx  Scanner.tsx  Scraper.tsx  Settings.tsx  Tasks.tsx  Trash.tsx  Workflow.tsx  tasksResult.ts
frontend/src/pages/Scanner/: ScannerPage.tsx
frontend/src/pages/Scanner/components/: MediaLibraryPanel.tsx  MediaStatsCards.tsx  ScanHistoryPanel.tsx
frontend/src/pages/__tests__/: Scanner.test.tsx  Tasks.test.ts
frontend/src/routes/: managementRoutes.tsx  operationsRoutes.tsx
frontend/src/test/: setup.ts  utils.tsx
frontend/src/types/: axios.d.ts  gravity-icons-deep-imports.d.ts  heroui-deep-imports.d.ts
frontend/src/ui/: heroui.ts  icons.ts
frontend/src/utils/: WebSocketManager.ts  errorHandler.ts  export.ts  toast.ts
frontend/src/utils/__tests__/: errorHandler.test.ts
frontend/tests/e2e/: smoke.spec.ts
scripts/: fnos_lifecycle.sh  fnpack.sh  run_tests.sh
