[package]
name = "cine-backend"
version = "1.2.0"
edition = "2021"
authors = ["Cine Team"]
description = "Cine - 高性能影视文件管理工具后端"
license = "MIT"
repository = "https://github.com/yourusername/cine"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip", "compression-deflate", "compression-br"] }
clap = { version = "4.4", features = ["derive"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP 客户端（用于调用 TMDB API）
reqwest = { version = "0.11", features = ["json"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
futures-util = "0.3"
futures = "0.3"
urlencoding = "2.1"
url = "2.5"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

# 哈希计算
md5 = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
memmap2 = "0.9"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Concurrent collections
dashmap = "6"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置管理
config = "0.14"

# 文件路径处理
pathdiff = "0.2"

# 正则表达式（用于文件名解析）
regex = "1.10"
prometheus = "0.13"
sysinfo = "0.30"
hostname = "0.4"

# 延迟初始化（用于预编译正则）
once_cell = "1.19"

# LRU 缓存
lru = "0.12"

# 异步任务队列
tokio-cron-scheduler = "0.9"

# 文件监控
notify = "6.1"

# XML 处理 (NFO 编辑)
quick-xml = { version = "0.36", features = ["serialize"] }

utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

async-graphql = { version = "=7.0.5", features = ["dynamic-schema", "chrono", "uuid", "url", "string_number"] }
async-graphql-axum = "=7.0.5"
async-graphql-derive = "=7.0.5"
async-graphql-parser = "=7.0.5"
async-graphql-value = "=7.0.5"

axum-extra = { version = "0.9", features = ["typed-header"] }

extism = "1.13.0"
jwalk = "0.8.1"
rayon = "1.11.0"
strsim = "0.11.1"

[dev-dependencies]
# 测试框架
tokio-test = "0.4"
mockall = "0.12"
mockito = "0.32"
tempfile = "3.10"
assert_matches = "1.5"

# 测试工具
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
env_logger = "0.11"

[lib]
name = "cine_backend"
path = "src/lib.rs"

[[bin]]
name = "cine-backend"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "performance_bench"
harness = false
